Added "About Us" page

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+  <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,50 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Welcome to Best Cars dealership, home to the best cars in North America. We deal in sale of domestic 
+        and imported cars at reasonable prices.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person1.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">CEO</p>
+          <p>Mei Lin Chen</p>
+          <p class="card-text">
+            Mei Lin is inspiringly known for her visionary leadership and commitment to innovation. 
+            Her ability to foster collaboration and drive strategic growth has positioned the company 
+            as a leader in its industry, ensuring both employee engagement and customer satisfaction.
+          </p>
+          <p>MeiLinChen@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person2.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">CMO</p>
+          <p>David Nguyen</p>
+          <p class="card-text">
+            David is known for his innovative marketing strategies and deep understanding of 
+            consumer insights. His ability to leverage data and creativity has consistently boosted brand 
+            engagement and market share, making him a key asset to the organization.
+          </p>
+          <p>DavidNguyen@bestcars.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/person3.png" alt="Card image">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">CFO</p>
+          <p>Sophia Martinez</p>
+          <p class="card-text">
+            Sofia is highly skilled with a strong track record in financial strategy and risk management. 
+            Her analytical expertise and commitment to transparency drive fiscal discipline, ensuring 
+            sustainable growth and organizational success.
+          </p>
+          <p>SophiaMartinez@bestcars.com</p>
         </div>
       </div>
     </div>
