Updated "Contact Us" page

--- a/server/frontend/static/Contact.html
+++ b/server/frontend/static/Contact.html
@@ -25,10 +25,19 @@
       </div>
     </div>
   </nav>
-  <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
-    <img class="card-img-top" style="width: 15%; padding-top: 2%; padding-bottom: 3%" src="/static/contactus.png" alt="Card image">
-    <p class="card-text">
-        
+  <div class="card" style="width: 75%; margin: auto; margin-top:5%;">
+    <img class="card-img-top" style="width: 15%; padding-top: 2%; padding-bottom: 2%" src="/static/contactus.png" alt="Card image">
+    <p class="contact-info">
+      <b>Contact Customer Service</b>
+      <br>support@bestcars.com<br>
+      <b>Contact our National Advertising team</b>
+      <br>NationSales@bestcars.com<br>
+      <b>Contact our Public Relations team</b>
+      <br>PR@bestcars.com<br>
+      <b>Contact the bestcars.com offices</b>
+      <br>312-611-1111<br>
+      <b>Become a bestcars.com car dealer<br>
+        Visit growwithbestcars.com</b>
     </p>
 </div>
 </div>
